[package]
name = "md-designer"
version = "0.1.1"
authors = ["Y.Matsuda <zeroclock@icloud.com>"]
edition = "2018"
license = "MIT"
description = "A CLI tool for creating design docs in Markdown"
repository = "https://github.com/toolbox-labo/md-design-doc"
homepage = "https://github.com/toolbox-labo/md-design-doc"
readme = "README.md"

[[bin]]
path = "src/bin/main.rs"
name = "mddoc"

[features]
default = []
excel = ["xlsxwriter"]

[dependencies]
pulldown-cmark = "0.8.0"
clap = "2.33.3"
anyhow = "1.0.32"
regex = "1.4.3"
xlsxwriter = { version = "0.3.2", optional = true }
yaml-rust = "0.4.5"
lazy_static = "1.4.0"
env_logger = "0.8.2"
log = "0.4.14"
chrono = "0.4.19"
